fix instant-quote form z-index

--- a/views/pages/instant-quote/instant-quote.scss
+++ b/views/pages/instant-quote/instant-quote.scss
@@ -288,3 +288,10 @@
         }
     }
 }
+
+.roundBlock.masterBlock {
+    z-index: 2;
+}
+.roundBlock.slaveBlock {
+    z-index: 1;
+}
